--- a/project/src/main/res/layout/login_widget.xml
+++ b/project/src/main/res/layout/login_widget.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.CarLoginWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.AccountLoginWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -270,7 +270,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        layout="@layout/include_car_account_button"
+        layout="@layout/include_accountv2_button"
         android:visibility="gone" />
 
     <com.expedia.bookings.widget.TextView
@@ -284,5 +284,4 @@
         android:gravity="center|left"
         android:drawablePadding="8dp"
         android:text="Sign in with Expedia" />
-
-</com.expedia.bookings.widget.CarLoginWidget>
+</com.expedia.bookings.widget.AccountLoginWidget>
