--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -1,30 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/search_container"
+<android.support.v7.widget.CardView
+    android:id="@+id/results_card_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:background="@android:color/white"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="4dp">
 
-    <com.expedia.bookings.widget.OptimizedImageView
-        android:id="@+id/activity_image"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_expedia_traveler_logo"
-        />
+        android:layout_height="wrap_content">
+
+        <com.expedia.bookings.widget.OptimizedImageView
+            android:id="@+id/activity_image"
+            android:layout_width="match_parent"
+            android:layout_height="144dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/lx_result_list_gradient_bottom" />
+
+        <LinearLayout
+            android:id="@+id/activity_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/activity_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_weight="8"
+                android:gravity="left"
+                android:maxLines="2"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/activity_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_weight="2"
+                android:gravity="right"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/activity_info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#33000000"
-        android:layout_alignParentBottom="true">
+        android:layout_marginTop="144dp"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
         <TextView
-            android:id="@+id/activity_title"
-            android:layout_width="270dp"
-            android:layout_height="40dp"
+            android:id="@+id/activity_categories"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="4dp"
+            android:layout_weight="7"
+            android:padding="2dp"
+            android:textColor="@color/lx_search_result_info_text_color"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/activity_from_price_ticket_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:gravity="right"
             android:maxLines="2"
-            android:textColor="@android:color/white"
-            />
+            android:textColor="@color/lx_search_result_info_text_color"
+            android:textSize="10sp" />
     </LinearLayout>
-</RelativeLayout>
+</android.support.v7.widget.CardView>
