--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -243,4 +243,8 @@
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_calendar_week_color">#888888</color>
 
+    <!-- LX colors -->
+    <color name="lx_search_result_info_text_color">#5C5C5C</color>
+
+
 </resources>
