--- a/project/src/main/res/layout/lx_dropdown_item.xml
+++ b/project/src/main/res/layout/lx_dropdown_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:paddingTop="10dp" android:paddingBottom="10dp" android:background="#ffffff">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <ImageView
+        android:id="@+id/lx_dropdown_imageView"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:id="@+id/lx_dropdown_imageView"
-        android:src="@drawable/ic_suggest_current_location"
-        android:paddingLeft="1dp"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:paddingLeft="1dp" />
 
     <com.expedia.bookings.widget.TextView
-        android:paddingLeft="5dp"
+        android:id="@+id/display_name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/display_name_textView"
-        android:layout_toRightOf="@+id/lx_dropdown_imageView" />
+        android:layout_toRightOf="@+id/lx_dropdown_imageView"
+        android:paddingLeft="5dp"
+        android:textColor="@color/lx_secondary_color"/>
 </RelativeLayout>
