--- a/project/src/main/res/layout/widget_lx_search_params.xml
+++ b/project/src/main/res/layout/widget_lx_search_params.xml
@@ -26,35 +26,70 @@
 
             <AutoCompleteTextView
                 android:id="@+id/search_location"
-                style="@style/V2.Theme.LX.Autocomplete"
-                android:layout_width="0dp"
+                style="@style/LXAutocomplete"
+                android:layout_width="match_parent"
                 android:layout_height="43dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="4dp"
-                android:layout_weight="1"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="8dp"
                 android:completionThreshold="1"
+                android:drawableLeft="@drawable/location"
                 android:dropDownAnchor="@+id/location_container"
-                android:imeOptions="actionDone" />
+                android:hint="Enter destination"
+                android:imeOptions="actionDone"
+                android:inputType="textNoSuggestions" />
 
         </LinearLayout>
 
-        <Button
+        <ToggleButton
             android:id="@+id/select_dates"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/lx_button_background_selector"
+            android:drawableLeft="@drawable/lx_button_circle"
+            android:drawablePadding="12dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="13dp"
+            android:paddingRight="5dp"
+            android:textAllCaps="false"
+            android:textColor="@drawable/lx_text_selector"
+            android:textOff="@string/select_lx_search_dates"
+            android:textOn="@string/select_lx_search_dates"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:id="@id/calendar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/select_lx_search_dates" />
+            android:layout_marginTop="50dp"
+            android:orientation="vertical" >
 
-        <!-- This can be replaced by Suggestion list -->
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/drop_shadow" />
 
-        <com.mobiata.android.time.widget.CalendarPicker
-            android:id="@+id/search_calendar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/search_widget_calendar_height"
-            android:layout_weight="0" />
+            <com.mobiata.android.time.widget.CalendarPicker
+                android:id="@+id/search_calendar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/slider_shadow"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+
+                app:calendarDaySelectionFillColor="@android:color/white"
+                app:calendarHeaderTextColor="@color/lx_primary_color"
+                app:calendarHeaderTextSize="16dp"
+                app:calendarHighlightColor="@color/lx_secondary_color"
+                app:calendarHighlightInverseColor="@color/lx_secondary_color"
+                app:calendarTodayColor="@color/lx_valid_days_calendar"
+                app:calendarInvalidDaysColor="@color/lx_invalid_days_calendar"
+                app:calendarLayout="@layout/calendar_cars_lx_layout"
+                 />
+        </LinearLayout>
 
     </LinearLayout>
 
