--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -233,8 +233,14 @@
     <color name="bg_checkout_saved_traveler_cc_row">#f0f0f0</color>
     <color name="bg_checkout_saved_traveler_cc_row_pressed">#dcdcdc</color>
 
+    <!-- LX colors -->
     <color name="lx_primary_color">#AF580A</color>
     <color name="lx_secondary_color">#DB6F0D</color>
     <color name="lx_heading_text_color">#5C5C5C</color>
+    <color name="lx_dropdown_background_color">#ECECEC</color>
+    <color name="lx_dropdown_disabled_stroke">#C3C3C3</color>
+    <color name="lx_valid_days_calendar">#3A3A3A</color>
+    <color name="lx_invalid_days_calendar">#A9A9A9</color>
+    <color name="lx_calendar_week_color">#888888</color>
 
 </resources>
