--- a/project/src/main/res/drawable-v21/itin_button.xml
+++ b/project/src/main/res/drawable-v21/itin_button.xml
@@ -3,7 +3,7 @@
     android:color="#202429">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#1A1D20" />
+            <solid android:color="#3A424C" />
         </shape>
     </item>
 </ripple>
