--- a/project/src/main/res/drawable/itin_button.xml
+++ b/project/src/main/res/drawable/itin_button.xml
@@ -12,7 +12,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#1A1D20" />
+            <solid android:color="#3A424C" />
         </shape>
     </item>
 </selector>
