--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -1,68 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.PaymentWidget xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/payment_info_card_view"
     android:layout_width="match_parent"
     android:animateLayoutChanges="true"
     android:layout_height="wrap_content"
     android:background="#FFF"
-    android:layout_marginTop="16dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    card_view:cardCornerRadius="4dp">
-
-    <com.expedia.bookings.widget.TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textSize="18sp"
-        android:drawableLeft="@drawable/credit_large"
-        android:gravity="center|left"
-        android:id="@+id/payment_info_text"
-        android:drawablePadding="8dp"
-        android:text="Enter payment details" />
+    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_marginTop="12dp"
+    android:layout_marginLeft="9dp"
+    android:layout_marginRight="9dp"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="1dp">
 
     <LinearLayout
-        android:id="@+id/payment_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edit_credit_card"
+        <include layout="@layout/checkout_payment_button" />
+
+        <com.expedia.bookings.widget.LinearLayout
+            android:id="@+id/stored_card_container"
+            android:layout_height="64dp"
             android:layout_width="match_parent"
-            android:nextFocusDown="@+id/edit_cvv"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/display_credit_card_brand_icon_tablet"
+                android:layout_marginLeft="16dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/cars_checkout_cc_default_icon" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="15dp"
+                android:layout_weight="1">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/stored_card_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:gravity="center|left"
+                    app:textStyle="medium"
+                    android:textSize="16sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/stored_card_expiration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:gravity="center|left"
+                    android:text="Expired 11/15"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <com.expedia.bookings.widget.CarDriverCheckoutStatusLeftImageView
+                android:id="@+id/paymentStatusIcon"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp" />
+
+            <ImageView
+                android:id="@+id/remove_stored_card_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="8dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/bg_clickable_row"
+                android:src="@drawable/ic_log_out" />
+
+        </com.expedia.bookings.widget.LinearLayout>
+
+        <com.expedia.bookings.section.SectionBillingInfo xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:id="@+id/section_billing_info"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:hint="@string/credit_card_hint"
-            android:textSize="16sp" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/display_credit_card_brand_icon_grey"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_generic_card" />
+
+                <com.expedia.bookings.widget.NumberMaskEditText
+                    android:id="@+id/edit_creditcard_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="48dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="@string/credit_card_hint"
+                    android:layout_gravity="bottom"
+                    app:numberFormat="creditcard"
+                    android:singleLine="true" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/edit_creditcard_exp_text_btn"
+                    style="@style/CarFakeSpinner.Light"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:bufferType="spannable"
+                    android:hint="@string/expiration_date"
+                    android:textSize="18dp" />
+
+                <com.expedia.bookings.section.SectionLocation
+                    android:id="@+id/section_location_address"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/edit_address_postal_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/address_postal_code_hint"
+                        android:singleLine="true" />
+
+                </com.expedia.bookings.section.SectionLocation>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/cardholder_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cardholder"
+                android:layout_marginBottom="8dp"
+                android:textSize="@dimen/data_form_section_header_text"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:paddingLeft="12dp"
+                android:background="#635C5C5C" />
 
             <EditText
-                android:id="@+id/edit_cvv"
-                android:layout_width="0dp"
+                android:id="@+id/edit_name_on_card"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nextFocusDown="@+id/edit_postal_code"
-                android:singleLine="true"
-                android:layout_weight="1"
-                android:hint="@string/cvv_hint"
-                android:textSize="16sp" />
+                android:hint="@string/name_on_card_hint"
+                android:inputType="textPersonName|textCapWords"
+                android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/edit_postal_code"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:singleLine="true"
-                android:imeOptions="actionDone"
-                android:hint="@string/address_postal_code_hint"
-                android:textSize="16sp" />
-        </LinearLayout>
-
+        </com.expedia.bookings.section.SectionBillingInfo>
     </LinearLayout>
+
 </com.expedia.bookings.widget.PaymentWidget>
+
