--- a/project/src/main/res/layout/widget_car_confirmation.xml
+++ b/project/src/main/res/layout/widget_car_confirmation.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <FrameLayout
@@ -86,9 +86,9 @@
         </FrameLayout>
 
         <ScrollView
+            android:background="#3A424C"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,10 +102,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:background="@color/cars_confirmation_action_background"
                     android:drawableLeft="@drawable/car_directions"
-                    android:text="@string/directions"
-                    android:textColor="@color/cars_confirmation_action_text_color" />
+                    android:text="@string/directions"/>
 
                 <Button
                     android:id="@+id/calendar_action_button"
@@ -113,10 +111,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:background="@color/cars_confirmation_action_background"
                     android:drawableLeft="@drawable/add_to_calendar"
-                    android:text="@string/add_to_calendar"
-                    android:textColor="@color/cars_confirmation_action_text_color" />
+                    android:text="@string/add_to_calendar" />
 
                 <Button
                     android:id="@+id/call_action_button"
@@ -125,10 +121,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    android:background="@color/cars_confirmation_action_background"
                     android:drawableLeft="@drawable/car_call"
-                    android:text="@string/call_customer_support"
-                    android:textColor="@color/cars_confirmation_action_text_color" />
+                    android:text="@string/call_customer_support" />
 
                 <View
                     android:layout_width="match_parent"
@@ -141,9 +135,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:background="@color/cars_confirmation_action_background"
-                    android:drawableLeft="@drawable/car_hotel"
-                    android:textColor="@color/cars_confirmation_action_text_color" />
+                    android:drawableLeft="@drawable/car_hotel" />
 
                 <Button
                     android:id="@+id/add_flight_button"
@@ -152,14 +144,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    android:background="@color/cars_confirmation_action_background"
-                    android:drawableLeft="@drawable/car_flights"
-                    android:textColor="@color/cars_confirmation_action_text_color" />
+                    android:drawableLeft="@drawable/car_flights"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
                     android:background="#3A424C"
                     android:orientation="vertical"
                     android:padding="16dp">
