--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -213,6 +213,9 @@
     <color name="placeholder_background_color">#21394E</color>
 
     <!-- Cars colors -->
+
+    <color name="cars_status_bar_color">#7E4569</color>
+    <color name="cars_checkout_text_color">#676767</color>
     <color name="cars_primary_color">#7E4569</color>
     <color name="cars_secondary_color">#915B7C</color>
     <color name="cars_tooltip_color">#915B7C</color>
