--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -38,7 +38,7 @@
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:background">@drawable/itin_button</item>
         <item name="android:height">60dp</item>
-        <item name="android:textColor">@android:color/white</item>     
+        <item name="android:textColor">@color/cars_confirmation_action_text_color</item>     
         <item name="android:textSize">18sp</item>     
         <item name="android:paddingLeft">25dp</item>      
         <item name="android:drawablePadding">15dp</item>
@@ -78,6 +78,11 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
+    </style>
+
+    <style name="CarFakeSpinner.Light" parent="V2.Theme.Cars">
+        <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
+        <item name="android:textColor">@color/cars_actionbar_text_color</item>
     </style>
 
 </resources>
