--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -256,6 +256,7 @@
         <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
         <item name="android:actionBarStyle">@style/LaunchActionBar</item>
         <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
+        <item name="android:actionBarDivider">@null</item>
         <item name="skin_flightLineColor">@color/flight_trip</item>
         <item name="android:actionOverflowButtonStyle">@style/Widget.ActionBar.ActionButton.Overflow</item>
 
@@ -308,8 +309,8 @@
     </style>
 
     <style name="LaunchActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:displayOptions">showHome|useLogo</item>
-        <item name="android:background">@drawable/bg_launch_ab</item>
+        <item name="android:icon">@android:color/transparent</item>
+        <item name="android:displayOptions">showHome|showTitle</item>
     </style>
 
     <style name="LaunchActionBarTabStyle" parent="@android:style/Widget.Holo.ActionBar.TabView">
