--- a/project/src/main/res/layout/section_phone_launch_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_lob.xml
@@ -1,112 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="5dp"
-    android:paddingTop="5dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <com.expedia.bookings.widget.RoundedCornerFrameLayout
-        android:id="@+id/hotels_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/launch_lob_margin"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:radius="4dp">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="#FFF" />
 
-        <FrameLayout
-            android:layout_width="@dimen/launch_lob_tiles"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/lob_bg"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/launch_lob_tiles"
-            android:background="#028F87">
+            android:background="#fff" />
 
-            <ImageView
-                android:layout_width="wrap_content"
+        <com.expedia.bookings.widget.LinearLayout
+            android:id="@+id/lob_btn_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:divider="@drawable/space_lob_btns"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:showDividers="middle">
+
+            <com.expedia.bookings.widget.PhoneLaunchButton
+                android:id="@+id/hotels_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="10dp"
-                android:alpha="0.3"
-                android:src="@drawable/ic_lob_hotels" />
+                android:layout_weight="1"
+                app:btn_color="@color/hotel_lob_btn"
+                app:btn_icon="@drawable/ic_lob_hotels"
+                app:btn_text="@string/nav_hotels" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.expedia.bookings.widget.PhoneLaunchButton
+                android:id="@+id/flights_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="10dp"
-                android:text="@string/nav_hotels"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:layout_weight="1"
+                app:btn_color="@color/flight_lob_btn"
+                app:btn_icon="@drawable/ic_lob_flights"
+                app:btn_text="@string/nav_flights" />
 
-        </FrameLayout>
-    </com.expedia.bookings.widget.RoundedCornerFrameLayout>
-
-    <com.expedia.bookings.widget.RoundedCornerFrameLayout
-        android:id="@+id/flights_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/launch_lob_margin"
-        android:layout_toRightOf="@id/hotels_button"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:radius="4dp">
-
-        <FrameLayout
-            android:layout_width="@dimen/launch_lob_tiles"
-            android:layout_height="@dimen/launch_lob_tiles"
-            android:background="#204A8E">
-
-            <ImageView
-                android:layout_width="wrap_content"
+            <com.expedia.bookings.widget.PhoneLaunchButton
+                android:id="@+id/cars_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="10dp"
-                android:alpha="0.3"
-                android:src="@drawable/ic_lob_flights" />
+                android:layout_weight="1"
+                app:btn_color="@color/car_lob_btn"
+                app:btn_icon="@drawable/ic_lob_cars"
+                app:btn_text="@string/nav_cars" />
+        </com.expedia.bookings.widget.LinearLayout>
+    </FrameLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="10dp"
-                android:text="@string/nav_flights"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
-        </FrameLayout>
-    </com.expedia.bookings.widget.RoundedCornerFrameLayout>
-
-    <com.expedia.bookings.widget.RoundedCornerFrameLayout
-        android:id="@+id/cars_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/launch_lob_margin"
-        android:layout_toRightOf="@id/flights_button"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:radius="4dp">
-
-        <FrameLayout
-            android:layout_width="@dimen/launch_lob_tiles"
-            android:layout_height="@dimen/launch_lob_tiles"
-            android:background="#89366A">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="10dp"
-                android:alpha="0.3"
-                android:src="@drawable/ic_lob_cars" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="10dp"
-                android:text="@string/nav_cars"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
-
-        </FrameLayout>
-    </com.expedia.bookings.widget.RoundedCornerFrameLayout>
-
-</RelativeLayout>
+    <View
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:layout_marginTop="-1dp"
+        android:background="#FFF" />
+</LinearLayout>
