--- a/project/src/main/res/layout/widget_launch_list.xml
+++ b/project/src/main/res/layout/widget_launch_list.xml
@@ -2,11 +2,4 @@
 <com.expedia.bookings.widget.LaunchListWidget xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ECEFF1">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/launch_item_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</com.expedia.bookings.widget.LaunchListWidget>
+    android:background="#ECEFF1" />
