--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -297,4 +297,12 @@
 
     <attr name="calendar_month_tint_color" format="reference" />
 
+    <declare-styleable name="PhoneLaunchButton">
+        <!-- Button text -->
+        <attr name="btn_text" format="string" />
+        <!-- Button color -->
+        <attr name="btn_color" format="color" />
+        <!-- Button icon -->
+        <attr name="btn_icon" format="reference"/>
+    </declare-styleable>
 </resources>
