--- a/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
+++ b/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
@@ -4,9 +4,10 @@
         android:id="@+id/fake_search_bar_container"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="@dimen/tablet_search_width"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/tablet_search_header_height"
-        android:layout_gravity="top|center_horizontal"
+        android:layout_marginLeft="@dimen/destination_search_margin_horizontal"
+        android:layout_marginRight="@dimen/destination_search_margin_horizontal"
         android:background="@drawable/bg_search_box"
         android:gravity="center"
         android:orientation="horizontal">
