--- a/project/src/travelocity/res/layout/widget_launch_destination_collection.xml
+++ b/project/src/travelocity/res/layout/widget_launch_destination_collection.xml
@@ -29,9 +29,12 @@
         android:ellipsize="end"
         android:gravity="left"
         android:maxLines="2"
-        android:padding="@dimen/destination_text_padding"
         android:textColor="#ffffff"
         android:textSize="@dimen/tablet_launch_destination_list_text_size"
+        android:paddingTop="@dimen/destination_text_padding_vertical"
+        android:paddingBottom="@dimen/destination_text_padding_vertical"
+        android:paddingLeft="@dimen/destination_text_padding_horizontal"
+        android:paddingRight="@dimen/destination_text_padding_horizontal"
         app:textStyle="thin" />
 
 </merge>
