--- a/project/src/main/res/layout/lx_offer_date_button.xml
+++ b/project/src/main/res/layout/lx_offer_date_button.xml
@@ -2,5 +2,6 @@
 <com.expedia.bookings.widget.LXOfferDatesButton
     style="@style/DateRadioButton"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_width="50dp"
+    android:layout_height="54dp"
+    android:textSize="10dp" />
