--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -13,6 +13,7 @@
         <item name="android:background">@drawable/lx_offer_date_selector</item>
         <item name="android:button">@android:color/transparent</item>
         <item name="android:gravity">center</item>
+        <item name="android:textColor">@drawable/lx_offer_date_text_selector</item>
     </style>
 
     <style name="DropDownListViewStyle">
