LX Offer and ticket selection widget UI polish. Updated Test.

--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -53,6 +53,8 @@
                 android:id="@+id/offers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:showDividers="middle|end"
+                android:divider="?android:dividerHorizontal"
                 android:orientation="vertical" />
 
             <include
