--- a/project/src/main/res/layout/section_lx_offer_row.xml
+++ b/project/src/main/res/layout/section_lx_offer_row.xml
@@ -14,44 +14,41 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.7"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_weight="0.7">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/offer_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:maxLines="1"
-                android:textColor="@android:color/black"
-                android:textSize="10sp"
+                android:textColor="@color/lx_ticket_title_color"
+                android:textSize="13sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/price_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:maxLines="1"
-                android:textColor="@android:color/black"
+                android:textColor="@color/lx_ticket_summary_color"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/select_tickets"
-            android:layout_width="0dp"
-            android:layout_height="43dp"
-            android:layout_marginTop="16dp"
-            android:paddingBottom="6dp"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingTop="6dp"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:background="@drawable/lx_select_ticket_button_selector"
+            android:padding="10dp"
             android:text="Select Tickets"
             android:textAllCaps="false"
-            android:textColor="@android:color/black"
-            android:textSize="10sp"
-            android:layout_weight="0.3"/>
+            android:textColor="@android:color/white"
+            android:textSize="13sp" />
     </LinearLayout>
 
     <include
