--- a/project/src/main/res/layout/widget_lx_ticket_selection.xml
+++ b/project/src/main/res/layout/widget_lx_ticket_selection.xml
@@ -2,31 +2,66 @@
 <com.expedia.bookings.widget.LXTicketSelectionWidget
     android:id="@+id/offer_tickets_widget"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="4dp">
 
-    <LinearLayout
-        android:id="@+id/ticket_selectors_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/selected_ticket_summary"
-            android:layout_width="0dp"
+            android:id="@+id/offer_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/lx_ticket_title_color"
+            android:textSize="13sp"
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/lx_book_now"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/ticket_selectors_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:orientation="vertical" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_marginTop="5dp"
+            android:background="?android:dividerHorizontal" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/selected_ticket_summary"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textColor="@color/lx_ticket_summary_color"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/lx_book_now"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:background="@drawable/lx_book_now_button_selector"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="16dp" />
+        </LinearLayout>
     </LinearLayout>
+
 </com.expedia.bookings.widget.LXTicketSelectionWidget>
